# game-of-life-rs

./: Cargo.toml  README.md
benches/: propogate_bench.rs
src/: .main.rs.swp  game.rs  lib.rs  main.rs  main_copy.rs  perf.data  rules.rs
